--- a/开发方案.md
+++ b/开发方案.md
@@ -42,7 +42,7 @@
 
 ```mermaid
 flowchart TD
-    A[打开App] --> B[创建拍摄会话]
+    A[打开App] --> B[创建拍摄相册]
     B --> C[连接相机/使用手机]
     C --> D[开始拍摄]
     D --> E[照片自动上传]
@@ -117,11 +117,11 @@ flowchart TD
 #### 3.2.2 核心API接口
 
 ```javascript
-// routes/session.js - 会话管理
+// routes/session.js - 相册管理
 const express = require('express');
 const router = express.Router();
 
-// 创建拍摄会话
+// 创建拍摄相册
 router.post('/sessions', async (req, res) => {
   /*
   POST /api/sessions
@@ -161,7 +161,7 @@ router.post('/sessions', async (req, res) => {
   */
 });
 
-// 获取会话详情
+// 获取相册详情
 router.get('/sessions/:id', async (req, res) => {
   /*
   GET /api/sessions/123
@@ -300,7 +300,7 @@ router.post('/sessions/:sessionId/photos', upload.array('photos', 20), async (re
   }
 });
 
-// 获取会话照片列表
+// 获取相册照片列表
 router.get('/sessions/:sessionId/photos', async (req, res) => {
   /*
   GET /api/sessions/123/photos?page=1&limit=20&sort=desc&tags=新郎新娘&code=1234
@@ -408,17 +408,17 @@ function initSocket(server) {
   io.on('connection', (socket) => {
     console.log('用户连接:', socket.id);
 
-    // 加入会话房间
+    // 加入相册房间
     socket.on('join_session', (sessionId) => {
       socket.join(`session_${sessionId}`);
-      console.log(`用户 ${socket.id} 加入会话 ${sessionId}`);
+      console.log(`用户 ${socket.id} 加入相册 ${sessionId}`);
 
       // 广播在线人数
       const roomSize = io.sockets.adapter.rooms.get(`session_${sessionId}`)?.size || 0;
       io.to(`session_${sessionId}`).emit('online_count', roomSize);
     });
 
-    // 离开会话房间
+    // 离开相册房间
     socket.on('leave_session', (sessionId) => {
       socket.leave(`session_${sessionId}`);
       const roomSize = io.sockets.adapter.rooms.get(`session_${sessionId}`)?.size || 0;
@@ -483,7 +483,7 @@ class ApiService {
     _dio.options.receiveTimeout = Duration(seconds: 30);
   }
 
-  // 创建会话
+  // 创建相册
   Future<Session> createSession(String name, String description) async {
     try {
       final response = await _dio.post('/sessions', data: {
@@ -502,7 +502,7 @@ class ApiService {
         throw Exception(response.data['message']);
       }
     } catch (e) {
-      throw Exception('创建会话失败: $e');
+      throw Exception('创建相册失败: $e');
     }
   }
 
@@ -896,9 +896,9 @@ export default function SharePage({ session, photos: initialPhotos }) {
   });
 
   describe('GET /api/sessions/:id', () => {
-    it('应该返回会话详情', async () => {
+    it('应该返回相册详情', async () => {
       const session = await db.sessions.create({
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       });
 
@@ -909,7 +909,7 @@ export default function SharePage({ session, photos: initialPhotos }) {
       expect(response.body.data.name).toBe(session.name);
     });
 
-    it('应该返回404当会话不存在', async () => {
+    it('应该返回404当相册不存在', async () => {
       const response = await request(app)
         .get('/api/sessions/nonexistent')
         .expect(404);
@@ -935,7 +935,7 @@ describe('Photo API', () => {
     await db.sessions.destroy({ where: {} });
     
     session = await db.sessions.create({
-      name: '测试会话',
+      name: '测试相册',
       description: '测试描述'
     });
   });
@@ -1042,7 +1042,7 @@ describe('完整工作流程测试', () => {
   });
 
   it('应该完成完整的拍摄分享流程', async () => {
-    // 1. 创建会话
+    // 1. 创建相册
     const sessionResponse = await request(app)
       .post('/api/sessions')
       .send({
@@ -1063,7 +1063,7 @@ describe('完整工作流程测试', () => {
 
     const sessionId = sessionResponse.body.data.session_id;
 
-    // 2. 加入会话WebSocket房间
+    // 2. 加入相册WebSocket房间
     ws.send(JSON.stringify({
       type: 'join_session',
       session_id: sessionId
@@ -1106,7 +1106,7 @@ describe('完整工作流程测试', () => {
 
   it('应该支持断点续传', async () => {
     const session = await db.sessions.create({
-      name: '测试会话'
+      name: '测试相册'
     });
 
     // 1. 初始化上传
@@ -1200,7 +1200,7 @@ describe('性能测试', () => {
 #### 第一阶段：MVP版本（4-6周）
 
 **核心功能**
-- 基础会话管理（创建、查看）
+- 基础相册管理（创建、查看）
 - 照片上传和展示
 - 简单的实时推送
 - 基础的Web端查看界面
@@ -1650,9 +1650,9 @@ class CanonWiFiCamera {
   });
 
   describe('GET /api/sessions/:id', () => {
-    it('应该返回会话详情', async () => {
+    it('应该返回相册详情', async () => {
       const session = await db.sessions.create({
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       });
 
@@ -1663,7 +1663,7 @@ class CanonWiFiCamera {
       expect(response.body.data.name).toBe(session.name);
     });
 
-    it('应该返回404当会话不存在', async () => {
+    it('应该返回404当相册不存在', async () => {
       const response = await request(app)
         .get('/api/sessions/nonexistent')
         .expect(404);
@@ -1689,7 +1689,7 @@ describe('Photo API', () => {
     await db.sessions.destroy({ where: {} });
     
     session = await db.sessions.create({
-      name: '测试会话',
+      name: '测试相册',
       description: '测试描述'
     });
   });
@@ -1796,7 +1796,7 @@ describe('完整工作流程测试', () => {
   });
 
   it('应该完成完整的拍摄分享流程', async () => {
-    // 1. 创建会话
+    // 1. 创建相册
     const sessionResponse = await request(app)
       .post('/api/sessions')
       .send({
@@ -1817,7 +1817,7 @@ describe('完整工作流程测试', () => {
 
     const sessionId = sessionResponse.body.data.session_id;
 
-    // 2. 加入会话WebSocket房间
+    // 2. 加入相册WebSocket房间
     ws.send(JSON.stringify({
       type: 'join_session',
       session_id: sessionId
@@ -1860,7 +1860,7 @@ describe('完整工作流程测试', () => {
 
   it('应该支持断点续传', async () => {
     const session = await db.sessions.create({
-      name: '测试会话'
+      name: '测试相册'
     });
 
     // 1. 初始化上传
@@ -1954,7 +1954,7 @@ describe('性能测试', () => {
 #### 第一阶段：MVP版本（4-6周）
 
 **核心功能**
-- 基础会话管理（创建、查看）
+- 基础相册管理（创建、查看）
 - 照片上传和展示
 - 简单的实时推送
 - 基础的Web端查看界面
@@ -2196,7 +2196,7 @@ describe('性能测试', () => {
     }
 
     try {
-      // 获取会话ID
+      // 获取相册ID
       const sessionResponse = await fetch(`${this.baseUrl}/ver100/session`, {
         method: 'POST'
       });
@@ -2315,9 +2315,9 @@ describe('性能测试', () => {
   });
 
   describe('GET /api/sessions/:id', () => {
-    it('应该返回会话详情', async () => {
+    it('应该返回相册详情', async () => {
       const session = await db.sessions.create({
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       });
 
@@ -2328,7 +2328,7 @@ describe('性能测试', () => {
       expect(response.body.data.name).toBe(session.name);
     });
 
-    it('应该返回404当会话不存在', async () => {
+    it('应该返回404当相册不存在', async () => {
       const response = await request(app)
         .get('/api/sessions/nonexistent')
         .expect(404);
@@ -2354,7 +2354,7 @@ describe('Photo API', () => {
     await db.sessions.destroy({ where: {} });
     
     session = await db.sessions.create({
-      name: '测试会话',
+      name: '测试相册',
       description: '测试描述'
     });
   });
@@ -2461,7 +2461,7 @@ describe('完整工作流程测试', () => {
   });
 
   it('应该完成完整的拍摄分享流程', async () => {
-    // 1. 创建会话
+    // 1. 创建相册
     const sessionResponse = await request(app)
       .post('/api/sessions')
       .send({
@@ -2482,7 +2482,7 @@ describe('完整工作流程测试', () => {
 
     const sessionId = sessionResponse.body.data.session_id;
 
-    // 2. 加入会话WebSocket房间
+    // 2. 加入相册WebSocket房间
     ws.send(JSON.stringify({
       type: 'join_session',
       session_id: sessionId
@@ -2525,7 +2525,7 @@ describe('完整工作流程测试', () => {
 
   it('应该支持断点续传', async () => {
     const session = await db.sessions.create({
-      name: '测试会话'
+      name: '测试相册'
     });
 
     // 1. 初始化上传
@@ -2619,7 +2619,7 @@ describe('性能测试', () => {
 #### 第一阶段：MVP版本（4-6周）
 
 **核心功能**
-- 基础会话管理（创建、查看）
+- 基础相册管理（创建、查看）
 - 照片上传和展示
 - 简单的实时推送
 - 基础的Web端查看界面
@@ -2868,9 +2868,9 @@ describe('性能测试', () => {
   });
 
   describe('GET /api/sessions/:id', () => {
-    it('应该返回会话详情', async () => {
+    it('应该返回相册详情', async () => {
       const session = await db.sessions.create({
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       });
 
@@ -2881,7 +2881,7 @@ describe('性能测试', () => {
       expect(response.body.data.name).toBe(session.name);
     });
 
-    it('应该返回404当会话不存在', async () => {
+    it('应该返回404当相册不存在', async () => {
       const response = await request(app)
         .get('/api/sessions/nonexistent')
         .expect(404);
@@ -2907,7 +2907,7 @@ describe('Photo API', () => {
     await db.sessions.destroy({ where: {} });
     
     session = await db.sessions.create({
-      name: '测试会话',
+      name: '测试相册',
       description: '测试描述'
     });
   });
@@ -3014,7 +3014,7 @@ describe('完整工作流程测试', () => {
   });
 
   it('应该完成完整的拍摄分享流程', async () => {
-    // 1. 创建会话
+    // 1. 创建相册
     const sessionResponse = await request(app)
       .post('/api/sessions')
       .send({
@@ -3035,7 +3035,7 @@ describe('完整工作流程测试', () => {
 
     const sessionId = sessionResponse.body.data.session_id;
 
-    // 2. 加入会话WebSocket房间
+    // 2. 加入相册WebSocket房间
     ws.send(JSON.stringify({
       type: 'join_session',
       session_id: sessionId
@@ -3078,7 +3078,7 @@ describe('完整工作流程测试', () => {
 
   it('应该支持断点续传', async () => {
     const session = await db.sessions.create({
-      name: '测试会话'
+      name: '测试相册'
     });
 
     // 1. 初始化上传
@@ -3172,7 +3172,7 @@ describe('性能测试', () => {
 #### 第一阶段：MVP版本（4-6周）
 
 **核心功能**
-- 基础会话管理（创建、查看）
+- 基础相册管理（创建、查看）
 - 照片上传和展示
 - 简单的实时推送
 - 基础的Web端查看界面
@@ -3855,13 +3855,13 @@ function verifyAccessCode(req, res, next) {
       const sessionId = req.params.sessionId;
       const accessCode = req.query.code || req.body.access_code;
       
-      // 获取会话信息
+      // 获取相册信息
       const session = await db.sessions.findById(sessionId);
       
       if (!session) {
         return res.status(404).json({
           code: 404,
-          message: '会话不存在'
+          message: '相册不存在'
         });
       }
       
@@ -3884,7 +3884,7 @@ function verifyAccessCode(req, res, next) {
         }
       }
       
-      // 将会话信息添加到请求对象
+      // 将相册信息添加到请求对象
       req.session = session;
       next();
       
@@ -3944,7 +3944,7 @@ class ResumableUpload {
     const uploadInfo = await this.getUploadInfo(uploadId);
     
     if (!uploadInfo) {
-      throw new Error('上传会话不存在');
+      throw new Error('上传相册不存在');
     }
     
     // 保存分片文件
@@ -4095,8 +4095,8 @@ module.exports = { i18n, i18nMiddleware };
     "processing": "处理中..."
   },
   "session": {
-    "created": "会话创建成功",
-    "not_found": "会话不存在",
+    "created": "相册创建成功",
+    "not_found": "相册不存在",
     "access_denied": "访问被拒绝"
   },
   "photo": {
@@ -4601,9 +4601,9 @@ describe('Session API', () => {
   });
 
   describe('POST /api/sessions', () => {
-    it('应该成功创建会话', async () => {
+    it('应该成功创建相册', async () => {
       const sessionData = {
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       };
 
@@ -4629,9 +4629,9 @@ describe('Session API', () => {
   });
 
   describe('GET /api/sessions/:id', () => {
-    it('应该返回会话详情', async () => {
+    it('应该返回相册详情', async () => {
       const session = await db.sessions.create({
-        name: '测试会话',
+        name: '测试相册',
         description: '测试描述'
       });
 
@@ -4642,7 +4642,7 @@ describe('Session API', () => {
       expect(response.body.data.name).toBe(session.name);
     });
 
-    it('应该返回404当会话不存在', async () => {
+    it('应该返回404当相册不存在', async () => {
       const response = await request(app)
         .get('/api/sessions/nonexistent')
         .expect(404);
@@ -4668,7 +4668,7 @@ describe('Photo API', () => {
     await db.sessions.destroy({ where: {} });
     
     session = await db.sessions.create({
-      name: '测试会话',
+      name: '测试相册',
       description: '测试描述'
     });
   });
@@ -4775,7 +4775,7 @@ describe('完整工作流程测试', () => {
   });
 
   it('应该完成完整的拍摄分享流程', async () => {
-    // 1. 创建会话
+    // 1. 创建相册
     const sessionResponse = await request(app)
       .post('/api/sessions')
       .send({
@@ -4796,7 +4796,7 @@ describe('完整工作流程测试', () => {
 
     const sessionId = sessionResponse.body.data.session_id;
 
-    // 2. 加入会话WebSocket房间
+    // 2. 加入相册WebSocket房间
     ws.send(JSON.stringify({
       type: 'join_session',
       session_id: sessionId
@@ -4839,7 +4839,7 @@ describe('完整工作流程测试', () => {
 
   it('应该支持断点续传', async () => {
     const session = await db.sessions.create({
-      name: '测试会话'
+      name: '测试相册'
     });
 
     // 1. 初始化上传
@@ -4933,7 +4933,7 @@ describe('性能测试', () => {
 #### 第一阶段：MVP版本（4-6周）
 
 **核心功能**
-- 基础会话管理（创建、查看）
+- 基础相册管理（创建、查看）
 - 照片上传和展示
 - 简单的实时推送
 - 基础的Web端查看界面
