--- a/项目开发进度报告.md
+++ b/项目开发进度报告.md
@@ -81,13 +81,13 @@ picture-live/
 1. **首页展示** - 产品介绍和功能展示
 2. **用户认证** - 登录、注册、密码重置
 3. **照片直播** - 实时照片流展示
-4. **会话管理** - 创建、加入、管理直播会话
+4. **相册管理** - 创建、加入、管理直播相册
 5. **用户中心** - 个人资料和设置
 6. **互动功能** - 评论、点赞、分享
 
 ### 后端API接口
 1. **认证接口** - `/api/auth/*`
-2. **会话接口** - `/api/sessions/*`
+2. **相册接口** - `/api/sessions/*`
 3. **照片接口** - `/api/photos/*`
 4. **用户接口** - `/api/users/*`
 5. **健康检查** - `/api/health`
@@ -97,7 +97,7 @@ picture-live/
 2. **用户认证** - 登录、注册、忘记密码
 3. **主页** - 功能导航和快速访问
 4. **照片管理** - 拍摄、上传、浏览
-5. **会话管理** - 创建、参与直播会话
+5. **相册管理** - 创建、参与直播相册
 6. **用户资料** - 个人信息管理
 7. **应用设置** - 偏好设置和配置
 
